--- a/index.html
+++ b/index.html
@@ -328,6 +328,6 @@
         </div>
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="website/js/app.js"></script>
 </body>
 </html>
