--- a/BattingAI - Baseball Swing Analysis.html
+++ b/BattingAI - Baseball Swing Analysis.html
@@ -327,13 +327,30 @@
             </div>
         </div>
     <div id="resultsContainer" class="mt-4 p-4 border rounded bg-light"><h3>Swing Analysis Results</h3><p><strong>Compared to:</strong> Brandon Lowe</p><div class="mb-3">
-            <h4>Overall Score: 84/100</h4>
+            <h4>Overall Score: 69/100</h4>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 84%" aria-valuenow="84" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-        </div><div class="mb-3"><h4>Strengths</h4><ul></ul><li>Good overall form matching the professional reference</li><li>Excellent stance preparation</li></div><div class="mb-3"><h4>Areas to Improve</h4><ul></ul><li>Fine-tune your follow-through for even better results</li></div><div class="mb-3">
+        </div><div class="mb-3"><h4>Strengths</h4><ul></ul><li>Consistent swing mechanics</li></div><div class="mb-3"><h4>Areas to Improve</h4><ul></ul><li>Work on your body positioning throughout the swing</li></div><div class="mb-3">
             <h4>Detailed Feedback</h4>
-            <p>Your swing shows excellent potential with a similarity score of 84/100 compared to the reference player. Your key strength is good overall form matching the professional reference. To improve, focus on fine-tune your follow-through for even better results.</p>
+            <p>Your swing shows good potential with a similarity score of 69/100. 
+
+Key Strengths:
+- Consistent swing mechanics: You maintain good rhythm through your swing
+
+
+Areas to Focus On:
+- Work on your body positioning throughout the swing: Focus on maintaining proper posture and alignment
+
+
+Recommended Drills:
+- Timing Refinement Drill: Improve your swing timing and rhythm
+  Steps:
+    * Use a tee or soft toss
+    * Practice with a metronome
+    * Focus on smooth load and trigger movements
+    * Gradually increase speed while maintaining form
+</p>
         </div><div class="mb-3"><h4>Frame-by-Frame Analysis</h4><div class="row row-cols-1 row-cols-md-3 g-4"><div class="col">
                 <div class="card h-100">
                     <div class="card-header bg-primary text-white">
@@ -354,9 +371,9 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Similarity: 98%</h5>
+                        <h5 class="card-title">Similarity: 69%</h5>
                         <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 98%" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6 class="card-subtitle mb-2 text-success">
                             Perfect!
@@ -384,9 +401,9 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Similarity: 87%</h5>
+                        <h5 class="card-title">Similarity: 69%</h5>
                         <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6 class="card-subtitle mb-2 text-success">
                             Perfect!
@@ -414,9 +431,9 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Similarity: 81%</h5>
+                        <h5 class="card-title">Similarity: 69%</h5>
                         <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 81%" aria-valuenow="81" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6 class="card-subtitle mb-2 text-success">
                             Perfect!
@@ -444,9 +461,9 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Similarity: 80%</h5>
+                        <h5 class="card-title">Similarity: 69%</h5>
                         <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6 class="card-subtitle mb-2 text-success">
                             Perfect!
@@ -474,9 +491,9 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Similarity: 77%</h5>
+                        <h5 class="card-title">Similarity: 69%</h5>
                         <div class="progress mb-3">
-                            <div class="progress-bar" role="progressbar" style="width: 77%" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <h6 class="card-subtitle mb-2 text-success">
                             Perfect!
@@ -498,35 +515,35 @@
                 <tbody><tr>
                     <td>1</td>
                     <td>Setup</td>
-                    <td>98%</td>
+                    <td>69%</td>
                     <td>No issues detected</td>
                 </tr>
             </tbody>
                 <tbody><tr>
                     <td>2</td>
                     <td>Load</td>
-                    <td>87%</td>
+                    <td>69%</td>
                     <td>No issues detected</td>
                 </tr>
             </tbody>
                 <tbody><tr>
                     <td>3</td>
                     <td>Swing</td>
-                    <td>81%</td>
+                    <td>69%</td>
                     <td>No issues detected</td>
                 </tr>
             </tbody>
                 <tbody><tr>
                     <td>4</td>
                     <td>Contact</td>
-                    <td>80%</td>
+                    <td>69%</td>
                     <td>No issues detected</td>
                 </tr>
             </tbody>
                 <tbody><tr>
                     <td>5</td>
                     <td>Follow-through</td>
-                    <td>77%</td>
+                    <td>69%</td>
                     <td>No issues detected</td>
                 </tr>
             </tbody></table></div></div></div></div>
