--- a/BattingAI - Baseball Swing Analysis.html
+++ b/BattingAI - Baseball Swing Analysis.html
@@ -293,6 +293,7 @@
                         <select class="form-control" id="playerSelect">
                             <option value="bryce_harper">Bryce Harper</option>
                             <option value="brandon_lowe">Brandon Lowe</option>
+                            <option value="mike_trout">Mike Trout</option>
                         </select>
                     </div>
                     
