--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@
                         <select class="form-control" id="playerSelect">
                             <option value="bryce_harper">Bryce Harper</option>
                             <option value="brandon_lowe">Brandon Lowe</option>
+                            <option value="mike_trout">Mike Trout</option>
+                            <option value="jonathan_aranda">Jonathan Aranda</option>
+                            <option value="aaron_judge">Aaron Judge</option>
+                            <option value="shohei_ohtani">Shohei Ohtani</option>
                         </select>
                     </div>
                     
